# foe_foundry

./: .gitattributes  .gitignore  .gitmodules  .npmrc  DATABASE_SETUP.md  FORMATTING_SOLUTION.md  MARKDOWN_EXPORT_PLAN.md  README.md  YAML_TEMPLATE_ISSUES.md  YAML_TEMPLATE_TRIAGE.md  _config.yml  analysis_report.md  apprunner.yaml  comprehensive_template_test_results.md  comprehensive_yaml_analysis.md  demo_auth.html  demo_credits_decorator.py  final_summary.md  foe_foundry_accounts.db  gen_pages.py  mkdocs-profile-summary.md  mkdocs.yml  monster-carousel-test.html  notes.txt  package-lock.json  package.json  process_creature_powers.py  pyproject.toml  quality_improvement_summary.md  requirements.txt  tag_proposal.md  template_conversion_results.md  template_gaps_analysis.md  test-codex.html  test.md  test_buttons.html  test_print_preview.html  test_refinements.html  test_tag_icons.html  test_tags.html  (+7 more)
.github/: copilot-instructions.md
.github/workflows/: test.yml  unit_tests.yml
content/: chimera.md  gelatinous-cube.md  gelatinous_cube.md  manticore.md  mimic.md  owlbear.md  spirit.md  spirits.md  wight.md
content/monsters/: chimera.md  gelatinous-cube.md  ghoul.md  lich.md  mage.md  manticore.md  mimic.md  owlbear.md  skeleton.md  skeletons.md  spirit.md  wight.md  zombie.md  zombies.md
content/themes/: undead.md  undead.yaml
data/: search_seeds.yaml
data/5e_artisinal_monsters/: al-aeshmagenie-tob1-2023.md  anglerworm-tob1-2023.md  annelidast-tob1-2023.md  ashwalker-tob1-2023.md  azzagremlin-tob1-2023.md  bearfolk-tob1-2023.md  beggarghoul-tob1-2023.md  beheadedvengefulspirit-tob1-2023.md  bonecollective-tob1-2023.md  boneswarm-tob1-2023.md  cactid-tob1-2023.md  carrionbeetle-tob1-2023.md  causticcharger-tob1-2023.md  cavelightmoss-tob1-2023.md  chronalmental-tob1-2023.md  citrullus-tob1-2023.md  eala-tob1-2023.md  (+80 more)
docs/: DGJ4QXPboL8AY5ksKs3zxDnrx.txt  MonsterCarousel.md  README.md  TESTING.md  analytics-test.html  build_performance.md  codex.md  credits.md  formatting.md  generate.html  generate.md  generator.html  index.md  mobile-toast-prd.md  monster-carousel-test.html  nl.md  performance_analysis.md  powers.md  print-preview.html  print-preview.md  print_example.md  roadmap.md  robots.txt  rss.xml  search-demo.html  support.md  test-mobile-layout.html  test-statblock.html  test.html  toast-library-assessment.md  vite.html
docs_gen/: __init__.py  backlinks.py  blog.py  families.py  json_ld.py  monsters.py  my_hooks.py  powers.py  related_monsters.py  topics.py  types.py
docs_hooks/: my_hooks.py
docs_theme/: base.html  codex.j2.html  content.html  generate-notes.md  generate.j2.html  homepage.j2.html  keyboard-modal.html  nav-sub.html  search-modal.html  toc.html
foe_foundry/: __init__.py  ac.py  app.py  attack_templates.py  attributes.py  creature_types.py  environs.py  hp.py  movement.py  power_types.py  powers.py  role_types.py  senses.py  size.py  skills.py  v2.md  xp.py
foe_foundry_agent/: __main__.py  console.py  graph.py  messages.py  run.py  terminal.py
foe_foundry_data/: __main__.py  generate.py  mask.py
foe_foundry_nl/: __main__.py  datasets.py  embeddings.py  model.py  similarity.py  test.py  train.py
foe_foundry_search/: __init__.py  __main__.py  setup.py
foe_foundry_site/: __main__.py  app.py  logconfig.py  package-lock.json  package.json
foe_foundry_ui/: package-lock.json  package.json
foundry_of_foes/: __init__.py  attributes.py  creature_types.py  size.py  skills.py  statblock.py
pages/: test.md
rapg/: README.md  pyproject.toml
rapg/prompts/: prompts.json
rapg/rapg/: __main__.py  model.py  prompts.py  similarity.py  test.py  train.py
rapg/rapg/data/: __init__.py  monsters.py  monsters2.py
rapg/rapg/monster_cleanup/: monster_cleanup.py
rapg/rapg/try2/: test.py
scripts/: build_docs.sh  build_site.sh  check_cuda.py  debug_site.sh  explore_embeddings.ipynb  fastapi.py  format.sh  format_code.py  gen_pages.py  generator.sh  homepage.sh  make_gif.sh  nlprocessing.py  openapi_monster_descriptions.py  optimize_images.py  print-to-pdf.js  print.sh  run_site.sh  serve_docs.sh  system_prompt_powers.txt  the_monsters_know.py
tests/: README.md  __main__.py  builder.ipynb  builder.py  conftest.py  setup.ts  test_attack.py  test_attributes.py  test_base_stats.py  test_comprehensive_template_comparison.py  test_damage_types.py  test_die.py  test_enhanced_yaml_quality.py  test_find_lore.py  test_generate_model.py  test_homepage.py  test_hp.py  test_html.py  test_icons.py  test_img_utils.py  test_jinja.py  test_md.py  test_monster_family_back_references.py  test_monster_model.py  test_pamphlet.py  test_power_model.py  test_ref_resolver.py  test_skills.py  test_statblock.py  test_templates.py  test_yaml_analysis.py  test_yaml_template_integration.py
(+17200 files in other folders)
