[tool.poetry]
name = "foe-foundry"
version = "0.1.0"
description = "Procedurally generate interesting and powerful 5e compatible monsters"
authors = ["Evan Rash <cordialgerm87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
openai = "^1.51.2"
transformers = "^4.45.2"
pytest = "^8.3.3"
pandas = "^2.2.3"
markdown = "^3.7"
d20 = "^1.1.2"
jinja2 = "^3.1.4"
jinja-markdown = "^1.210911"
tqdm = "^4.66.5"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
requests = "^2.32.3"
whoosh = "^2.7.4"
num2words = "^0.5.13"
backports-strenum = "^1.3.1"

[tool.poetry.scripts]
foe_foundry_nl = "foe_foundry_nl.__main__:cli"
ffnl = "foe_foundry_nl.__main__:cli"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"