[tool.poetry]
name = "foe-foundry"
version = "0.1.0"
description = "Procedurally generate interesting and powerful 5e compatible monsters"
authors = ["Evan Rash <cordialgerm87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.7"
numpy = "^2.3.2"
scikit-learn = "^1.7.1"
seaborn = "^0.13.2"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
openai = "^1.51.2"
pytest = "^8.3.3"
pandas = "^2.3.1"
markdown = "^3.8.2"
d20 = "^1.1.2"
jinja2 = "^3.1.6"
jinja-markdown = "^1.210911"
tqdm = "^4.66.5"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
requests = "^2.32.3"
whoosh = "^2.7.4"
num2words = "^0.5.13"
ipywidgets = "^8.1.5"
pillow = "^11.1.0"
pdfkit = "^1.0.0"
inflect = "^7.5.0"
mkdocs = "^1.6.1"
mkdocs-simple-blog = "^0.2.0"
mkdocs-gen-files = "^0.5.0"
python-frontmatter = "^1.1.0"
mkdocs-blogging-plugin = "^2.2.11"
gunicorn = "^23.0.0"
mkdocs-macros-plugin = "^1.3.7"
gitpython = "^3.1.44"
mkdocs-rss-plugin = "^1.17.1"
mkdocs-open-in-new-tab = "^1.0.8"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-backlinks = "^0.9.1"
lxml = "^5.4.0"
cairosvg = "^2.8.2"
networkx = "3.4"
matplotlib = "^3.10.5"
langgraph = "^0.6.5"
langchain-openai = "^0.3.30"
markdownify = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"