[tool.poetry]
name = "rapg"
version = "0.1.0"
description = ""
authors = ["Rash, Evan A <evan.a.rash@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
transformers = {extras = ["torch"], version = "^4.45.1"}
datasets = "^3.0.1"
seaborn = "^0.13.2"
click = "^8.1.7"
python-dateutil = "^2.9.0.post0"
torchvision = {version = "^0.19.1+cu124", source = "pytorch"}
torchaudio = {version = "^2.4.1+cu124", source = "pytorch"}
torch = {version = "^2.4.1+cu124", source = "pytorch"}
openai = "^1.51.0"
annotated-types = "^0.7.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
pyautogui = "^0.9.54"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rapg = "rapg.__main__:cli"
